Fixing loadurl Java->JavaScript comms problem which causes keyboard to close * loadurl replaced with sendJavaScript * UI updated to contain textarea and my-event data contents